[package]
name = "lofi_stripes"
version = "0.1.0"
edition = "2021"

#TODO: add description, repository, license.

[lib]
crate-type = ["cdylib"]

[dependencies]
ab_glyph = "0.2.28"
fontdue = "0.9.2"
image = "0.25"
imageproc = "0.25"
js-sys = "0.3"
once_cell = "1.20.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.4", features = ["console"] }

# https://rustwasm.github.io/docs/wasm-bindgen/examples/add.html
# [profile.release]
# lto = true
